[metadata]
name = game-render-engine-austinhellerrepo
version = 0.0.2
author = Austin Heller
description = A framework for rendering and manipulating game elements while communicating that between clients and server
url = https://github.com/AustinHellerRepo/GameRenderEngine
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  Panda3D
  common-austinhellerrepo@git+https://github.com/AustinHellerRepo/Common
  threading-austinhellerrepo@git+https://github.com/AustinHellerRepo/Threading
  socket-queued-message-framework-austinhellerrepo@git+https://github.com/AustinHellerRepo/SocketQueuedMessageFramework

[options.packages.find]
where = src
